--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="map"></div>
     <div class="map-overlay top">
         <button style="font-size: 2em" onclick="run()">
-            Track bus
+            Track bus MBTA route 1
         </button>
     </div>
     <script src="./mapanimation.js"></script>
